ทำ frontend ของระบบสัญญาเช่า - close #79
